--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flyme.meditation.lifeassistant.MainActivity">
+    android:orientation="vertical"
+    tools:context="com.flyme.meditation.lifeassistant.MainActivity"
+    android:paddingStart="@dimen/padding_horizontal_main"
+    android:paddingEnd="@dimen/padding_horizontal_main"
+    android:paddingTop="@dimen/padding_vertical_main"
+    android:paddingBottom="@dimen/padding_vertical_main">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/search_text_height"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edt_start"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/iv_switch"
+            android:layout_width="@dimen/switch_size"
+            android:layout_height="@dimen/switch_size"
+            android:src="@drawable/ic_swap_horiz_black_24dp" />
+
+        <EditText
+            android:id="@+id/edt_end"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_date"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:minHeight="@dimen/search_text_height"
+        android:layout_marginTop="@dimen/padding_vertical_main" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_vertical_main"
+        android:text="@string/search"/>
+
+</LinearLayout>
