--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:textAppearance">@style/CommonTextAppearance</item>
     </style>
 
+    <style name="CommonTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
