--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,12 @@
 <resources>
 
     <dimen name="font_normal">16sp</dimen>
+    <dimen name="font_small">14sp</dimen>
+    <dimen name="font_large">20sp</dimen>
 
     <dimen name="padding_horizontal_main">12dip</dimen>
     <dimen name="padding_vertical_main">12dip</dimen>
     <dimen name="switch_size">48dip</dimen>
     <dimen name="search_text_height">56dip</dimen>
+    <dimen name="ticket_result_min_height">96dip</dimen>
 </resources>
