--- a/app/src/main/res/layout/activity_fake_result.xml
+++ b/app/src/main/res/layout/activity_fake_result.xml
@@ -27,6 +27,8 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/padding_horizontal_main" />
+        android:dividerHeight="6dip"
+        android:divider="@android:color/transparent"
+        android:padding="6dip" />
 
 </FrameLayout>
