--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="text_empty">#9f9f9f</color>
     <color name="text_price">#f55555</color>
 
-    <color name="bg_list_item">#f2f2f2</color>
-    <color name="bg_list_item_clicked">#feeff0</color>
+    <color name="bg_list_item">#ffffff</color>
+    <color name="bg_list_item_clicked">#fffbf0</color>
 </resources>
