--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,9 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="64dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:src="@mipmap/ic_launcher" />
 
     <android.support.design.widget.TextInputLayout
@@ -21,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_logo"
-        android:layout_marginTop="56dp">
+        android:layout_marginTop="64dp"
+        android:imeOptions="actionNext">
 
 
         <EditText
@@ -37,7 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/til_account"
-        android:layout_marginTop="@dimen/padding_vertical_main">
+        android:layout_marginTop="@dimen/padding_vertical_main"
+        android:imeOptions="actionDone">
 
         <EditText
             android:id="@+id/et_password"
@@ -52,11 +56,24 @@
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="@dimen/padding_vertical_main"
+        android:layout_above="@+id/btn_reg"
+        android:layout_marginBottom="@dimen/padding_vertical_main"
         android:background="@drawable/bg_button"
         android:text="@string/login"
         android:textColor="@android:color/white"
         android:textSize="@dimen/font_normal" />
+
+    <TextView
+        android:id="@+id/btn_reg"
+        android:layout_width="48dp"
+        android:layout_height="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/padding_vertical_main"
+        android:layout_marginTop="@dimen/padding_vertical_main"
+        android:gravity="center"
+        android:text="@string/reg"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="@dimen/font_mini" />
 
 </RelativeLayout>
