--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="font_mini">12sp</dimen>
     <dimen name="font_normal">16sp</dimen>
     <dimen name="font_small">14sp</dimen>
     <dimen name="font_large">24sp</dimen>
+
 
     <dimen name="padding_horizontal_main">12dip</dimen>
     <dimen name="padding_vertical_main">12dip</dimen>
