--- a/app/src/main/res/layout/activity_fake_result.xml
+++ b/app/src/main/res/layout/activity_fake_result.xml
@@ -29,6 +29,7 @@
         android:layout_height="match_parent"
         android:dividerHeight="6dip"
         android:divider="@android:color/transparent"
-        android:padding="6dip" />
+        android:padding="6dip"
+        android:visibility="visible" />
 
 </FrameLayout>
