--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -85,13 +86,18 @@
         android:layout_marginTop="24dp"
         android:text="@string/price"
         android:textSize="@dimen/font_normal"
-        android:padding="@dimen/padding_horizontal_main"/>
+        android:padding="@dimen/padding_horizontal_main"
+        android:visibility="gone" />
 
-    <ListView
-        android:id="@android:id/list"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_source"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="@color/bg_list_item"
-        android:dividerHeight="1dp" />
+        android:layout_height="@dimen/source_tab_height"
+        android:layout_marginTop="24dp" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
