--- a/app/src/main/res/layout/item_ticket_result.xml
+++ b/app/src/main/res/layout/item_ticket_result.xml
@@ -1,94 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/padding_horizontal_main"
     android:background="@drawable/bg_ticket_result_item">
 
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/layout_start"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv_start_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_large"
-                android:textStyle="bold"
-                android:text="06:25" />
-
-            <TextView
-                android:id="@+id/tv_start_site"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
-                android:textSize="@dimen/font_small"
-                android:text="白云" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:src="@drawable/ic_go" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv_end_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_large"
-                android:textStyle="bold"
-                android:text="08:25"  />
-
-            <TextView
-                android:id="@+id/tv_end_site"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
-                android:textSize="@dimen/font_small"
-                android:text="高崎" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
-            android:id="@+id/tv_price"
+            android:id="@+id/tv_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:textSize="@dimen/font_large"
             android:textStyle="bold"
-            android:textColor="@color/text_price"
-            android:text="￥1155" />
+            android:text="06:25" />
+
+        <TextView
+            android:id="@+id/tv_start_site"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dip"
+            android:textSize="@dimen/font_small"
+            android:text="白云" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_go"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_toEndOf="@+id/layout_start"
+        android:src="@drawable/ic_go" />
+
+    <LinearLayout
+        android:id="@+id/layout_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/iv_go"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/tv_end_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/font_large"
+            android:textStyle="bold"
+            android:text="08:25"  />
+
+        <TextView
+            android:id="@+id/tv_end_site"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dip"
+            android:textSize="@dimen/font_small"
+            android:text="高崎" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="24dp"
+        android:textSize="@dimen/font_large"
+        android:textStyle="bold"
+        android:textColor="@color/text_price"
+        android:text="￥1155" />
+
 
     <TextView
         android:id="@+id/tv_air"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dip"
+        android:layout_below="@+id/layout_start"
         android:text="南航 CZ6412 | 空客321(中)" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_source"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dip"
+        android:layout_below="@+id/tv_price"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/text_source"
+        android:textSize="@dimen/font_normal"
+        android:text="去哪儿" />
+
+</RelativeLayout>
