登录、注册、个人中心完善

--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -26,14 +26,13 @@
             android:layout_marginTop="64dp"
             android:imeOptions="actionNext">
 
+
             <EditText
                 android:id="@+id/et_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/input_account"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:maxLines="1" />
+                android:imeOptions="actionNext" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -53,30 +52,33 @@
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_password_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/til_password"
+            android:layout_marginTop="@dimen/padding_vertical_main"
+            android:imeOptions="actionDone">
+
+            <EditText
+                android:id="@+id/et_password_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_password_confirm"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword" />
+        </android.support.design.widget.TextInputLayout>
+
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/til_password"
             android:layout_marginTop="96dp"
             android:background="@drawable/bg_button"
-            android:text="@string/login"
+            android:text="@string/reg"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_normal" />
-
-        <TextView
-            android:id="@+id/btn_reg"
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/btn_login"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/padding_vertical_main"
-            android:layout_marginTop="@dimen/padding_vertical_main"
-            android:gravity="center"
-            android:text="@string/reg"
-            android:textColor="@android:color/holo_blue_light"
-            android:textSize="@dimen/font_mini" />
 
     </RelativeLayout>
 </ScrollView>
