--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="search_text_height">56dip</dimen>
     <dimen name="ticket_result_min_height">96dip</dimen>
 
-    <dimen name="source_tab_height">36dip</dimen>
+    <dimen name="source_tab_height">48dip</dimen>
+    
+    <dimen name="font_ticket_order">18sp</dimen>
 </resources>
