--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -2,98 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/root">
 
-    <TextView
-        android:id="@+id/tv_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="24dp"
-        android:text="深圳航空 ZH9979 2017-10-01 周日" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="12dip"
-        android:gravity="center">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv_start_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_large"
-                android:textStyle="bold"
-                android:text="06:25" />
-
-            <TextView
-                android:id="@+id/tv_start_site"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
-                android:textSize="@dimen/font_small"
-                android:text="白云机场" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_duration"
-            android:layout_width="96dip"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dip"
-            android:layout_marginEnd="24dip"
-            android:gravity="center"
-            android:drawableBottom="@drawable/ic_arrow_right"
-            android:text="1小时25分钟"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv_end_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_large"
-                android:textStyle="bold"
-                android:text="06:25" />
-
-            <TextView
-                android:id="@+id/tv_end_site"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
-                android:textSize="@dimen/font_small"
-                android:text="白云机场" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bg_list_item"
-        android:layout_marginTop="24dp"
-        android:text="@string/price"
-        android:textSize="@dimen/font_normal"
-        android:padding="@dimen/padding_horizontal_main"
-        android:visibility="gone" />
+    <include layout="@layout/module_tick_info" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_source"
         android:layout_width="match_parent"
         android:layout_height="@dimen/source_tab_height"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="24dp"
+        android:background="@color/divider"
+        app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
